# solidity-merkle-trees

./: .gitignore  .gitmodules  .npmignore  Dockerfile  README.md  foundry.toml  package-lock.json  package.json  pnpm-lock.yaml  remappings.txt
.github/workflows/: test.yml
contracts/: MerkleMountainRange.sol  MerkleMultiProof.sol  MerklePatricia.sol
contracts/trie/: NibbleSlice.sol  Node.sol  TrieDB.sol
forge/: Cargo.toml
forge/fuzz/fuzz_targets/: trie_proof_invalid.rs
forge/fuzz/src/: lib.rs
forge/src/: forge.rs  lib.rs  merkle_mountain_range.rs  merkle_multi_proof.rs  merkle_patricia.rs
integration-tests/: Cargo.toml
integration-tests/fuzz/: Cargo.toml
integration-tests/fuzz/fuzz_targets/: trie_proof_valid.rs
integration-tests/fuzz/src/: lib.rs
integration-tests/src/: lib.rs  merkle_mountain_range.rs  merkle_multi_proof.rs  merkle_patricia.rs  positional_merkle.rs
lib/: MerkleMultiProof.sol  MerklePatricia.sol  NibbleSlice.sol  NodeCodec.sol  ParachainHashDB.sol  Test.sol
lib/mpt/: HashDB.sol  MerklePatricia.sol  NibbleSlice.sol  Node.sol  NodeCodec.sol  Option.sol  ParachainHashDB.sol  SubstrateHashDB.sol  TrieDB.sol
lib/mpt/substrate/: Bytes.sol  Memory.sol  ScaleCodec.sol  SubstrateHashDB.sol
lib/trie/: Bytes.sol  HashDB.sol  NodeCodec.sol  NodeDB.sol  TrieDB.sol
lib/trie/substrate/: Blake2b.sol  ScaleCodec.sol  SubstrateHashDB.sol  SubstrateNodeDB.sol  SubstrateTrieDB.sol
src/: MerkleMountainRange.sol  MerkleMultiProof.sol  MerkleMultiProof.t.sol  MerklePatricia.sol  Test.sol  Types.sol  package.json
src/trie/: Bytes.sol  Memory.sol  NibbleSlice.sol  NibbleVec.sol  Node.sol  NodeCodec.sol  Option.sol  TrieDB.sol
src/trie/ethereum/: EthereumTrieDB.sol  RLPReader.sol
src/trie/substrate/: ScaleCodec.sol  SubstrateTrieDB.sol
test/: Cargo.toml  MerkleMountainRange.t.sol  MerkleMultiProof.t.sol  MerklePatricia.t.sol  rustfmt.toml
test/contracts/: MerkleMultiProof.t.sol
test/src/: helpers.rs  lib.rs
tests/: Cargo.toml
tests/foundry/: MerkleMountainRange.t.sol  MerkleMultiProof.t.sol  MerklePatricia.t.sol
tests/fuzz/: Cargo.toml
tests/fuzz/src/: lib.rs
tests/rust/: Cargo.toml
tests/rust/fuzz/: Cargo.toml
tests/rust/fuzz/src/: lib.rs
tests/rust/proptest-regressions/: merkle_mountain_range.txt  merkle_multi_proof.txt
tests/rust/src/: evm_runner.rs  lib.rs  merkle_mountain_range.rs  merkle_multi_proof.rs  merkle_patricia.rs  multi_proof_utils.rs
tests/src/: forge.rs  lib.rs  merkle_patricia.rs
