[package]
name = "solidity-merkle-trees-test"
version = "0.1.0"
edition = "2021"

[dependencies]
forge = { git = "https://github.com/foundry-rs/foundry", rev = "b2baca32bd1a3b31b6f6ae2950a14c5bb8607cdb" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "b2baca32bd1a3b31b6f6ae2950a14c5bb8607cdb" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "b2baca32bd1a3b31b6f6ae2950a14c5bb8607cdb" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "b2baca32bd1a3b31b6f6ae2950a14c5bb8607cdb" }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "solc-full",
    "solc-tests",
] }
once_cell = "1.17.0"
hex-literal = "0.3.4"
rs_merkle = { git = "https://github.com/polytope-labs/rs-merkle", branch = "seun/2d-merkle-proofs" }
hex = "0.4.3"
ckb-merkle-mountain-range = { git = "https://github.com/polytope-labs/merkle-mountain-range", branch = "seun/simplified-mmr" }

trie-db = "0.24.0"
patricia-merkle-trie = { git = "https://github.com/polytope-labs/patricia-merkle-trie", branch = "main" }
primitive-types = "0.12.1"
codec = { package = "parity-scale-codec", version = "3.4.0" }
sp-core = "17.0.0"
sp-trie = "17.0.0"
libfuzzer-sys = "0.4.6"

# Prevent this from interfering with workspaces
[workspace]
members = [".", "fuzz"]
