[package]
name = "solidity-merkle-trees-test"
version = "0.1.0"
edition = "2021"

[dependencies]
forge = { git = "https://github.com/foundry-rs/foundry", rev = "25d3ce7ca1eed4a9f1776103185e4221e8fa0a11" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "25d3ce7ca1eed4a9f1776103185e4221e8fa0a11" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "25d3ce7ca1eed4a9f1776103185e4221e8fa0a11" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "25d3ce7ca1eed4a9f1776103185e4221e8fa0a11" }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ethers-solc"] }

once_cell = "1.17.0"
hex-literal = "0.3.4"
rs_merkle = { git = "https://github.com/polytope-labs/rs-merkle", branch = "seun/2d-merkle-proofs" }
hex = "0.4.3"
ckb-merkle-mountain-range = { git = "https://github.com/polytope-labs/merkle-mountain-range", branch = "seun/simplified-mmr" }

trie-db = "0.24.0"
tokio = { version = "1.17.0", features = ["macros"] }
patricia-merkle-trie = { package = "ethereum-trie", git = "https://github.com/polytope-labs/ethereum-trie", branch = "main" }
primitive-types = "0.12.1"
codec = { package = "parity-scale-codec", version = "3.4.0" }
sp-core = "17.0.0"
sp-trie = "17.0.0"
libfuzzer-sys = "0.4.6"
proptest = "1.2.0"
rand = "0.8.5"
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
beefy-merkle-tree = { package = "binary-merkle-tree", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }

# Prevent this from interfering with workspaces
[workspace]
members = [".", "fuzz"]
