[package]
name = "solidity-merkle-trees-test"
version = "0.1.0"
edition = "2021"

[dependencies]
forge = { git = "https://github.com/foundry-rs/foundry", rev = "nightly-925626516788be4274ba70f47e82ba30f58b5fbb" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "nightly-925626516788be4274ba70f47e82ba30f58b5fbb" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "nightly-925626516788be4274ba70f47e82ba30f58b5fbb" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "nightly-925626516788be4274ba70f47e82ba30f58b5fbb" }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "solc-full",
    "solc-tests",
] }
once_cell = "1.17.0"
hex-literal = "0.3.4"