[package]
name = "solidity-merkle-trees-fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
forge-testsuite = { git = "https://github.com/polytope-labs/forge-testsuite", rev = "ffd80776b9fe743f162108b02742267aff02a60a" }
patricia-merkle-trie = { package = "ethereum-trie", git = "https://github.com/polytope-labs/hyperbridge", branch = "main" }
solidity-merkle-trees-test = { path = "../" }

#trie-db = "0.24.0"
#sp-trie = "17.0.0"
#sp-core = "17.0.0"

 trie-db = "0.28.0"
 sp-trie = "29.0.0"
 sp-core = "28.0.0"

libfuzzer-sys = "0.11.4"

[[bin]]
name = "trie_proof_invalid"
path = "fuzz_targets/trie_proof_invalid.rs"

[[bin]]
name = "trie_proof_valid"
path = "fuzz_targets/trie_proof_valid.rs"