[package]
name = "solidity-merkle-trees-fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
forge-testsuite = { git = "https://github.com/polytope-labs/forge-testsuite", rev = "9a4e82498e60b6c90c09be1685dfc80bca057fc2" }
patricia-merkle-trie = { package = "ethereum-trie", git = "https://github.com/polytope-labs/ethereum-trie", branch = "main" }
solidity-merkle-trees-test = { path = "../" }

trie-db = "0.24.0"
sp-trie = "17.0.0"
sp-core = "17.0.0"

tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "trie_proof_invalid"
path = "fuzz_targets/trie_proof_invalid.rs"

[[bin]]
name = "trie_proof_valid"
path = "fuzz_targets/trie_proof_valid.rs"
