[package]
name = "solidity-merkle-trees-test"
version = "0.1.0"
edition = "2021"
description = "Integration tests for solidity-merkle-trees"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
once_cell = "1.17.0"
hex-literal = "0.4.1"
hex = "0.4.3"
trie-db = "0.28.0"
sp-trie = "29.0.0"
sp-core = "28.0.0"

primitive-types = "0.12.1"
codec = { package = "parity-scale-codec", version = "3.4.0" }
proptest = "=1.5.0"
rand = "0.8.5"
sp-runtime = "31.0.1"
binary-merkle-tree = "13.0.0"

# EVM execution
revm = { version = "19", default-features = false, features = ["std"] }
alloy-sol-types = "0.8"
alloy-primitives = "0.8"
serde_json = "1"
indexmap = "=2.7.1"
ruint = "=1.12.3"

# Merkle libraries
ckb-merkle-mountain-range = { git = "https://github.com/polytope-labs/merkle-mountain-range", branch = "seun/simplified-mmr" }
rs_merkle = { git = "https://github.com/polytope-labs/rs-merkle", branch = "seun/2d-merkle-proofs" }

# Prevent this from interfering with workspaces
[workspace]
members = [".", "fuzz"]
