[package]
name = "solidity-merkle-trees-fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
solidity-merkle-trees-test = { path = "../" }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

# Trie deps
trie-db = "0.28.0"
sp-trie = "29.0.0"
sp-core = "28.0.0"

libfuzzer-sys = "0.4"

# Pin for Rust 1.81 compat
indexmap = "=2.7.1"
ruint = "=1.12.3"

[[bin]]
name = "trie_proof_invalid"
path = "fuzz_targets/trie_proof_invalid.rs"

[[bin]]
name = "trie_proof_valid"
path = "fuzz_targets/trie_proof_valid.rs"
